tests/ui/polymorphization/coroutine.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/coroutine.rs:3:12
   |
LL | #![feature(generic_const_exprs, coroutines, coroutine_trait, rustc_attrs)]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: item has unused generic parameters
  --> $DIR/coroutine.rs:35:5
   |
LL | pub fn unused_type<T>() -> impl Coroutine<(), Yield = u32, Return = u32> + Unpin {
   |                    - generic parameter `T` is unused
LL |     || {
   |     ^^

error: item has unused generic parameters
  --> $DIR/coroutine.rs:60:5
   |
LL | pub fn unused_const<const T: u32>() -> impl Coroutine<(), Yield = u32, Return = u32> + Unpin {
   |                     ------------ generic parameter `T` is unused
LL |     || {
   |     ^^

error: aborting due to 2 previous errors; 1 warning emitted

